<resources>
    <string name="app_name">Countries</string>
    <string name="yes">Yes</string>
    <string name="no_record_found">No Record Found</string>

    <string name="country_code">Code:</string>
    <string name="country_name">Name:</string>
    <string name="country_capital">Capital:</string>
    <string name="country_emoji">Emoji:</string>
    <string name="country_currency">Currency:</string>
    <string name="country_language">Language:</string>
</resources>